testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag4.errors.txt
/a.js(5,32): error TS8037: Type satisfaction expressions can only be used in TypeScript files.
/a.js(5,43): error TS2741: Property 'a' is missing in type '{}' but required in type 'Foo'.
/b.js(6,32): error TS8037: Type satisfaction expressions can only be used in TypeScript files.


==== /a.js (2 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {number} a
     */
    export default /** @satisfies {Foo} */ ({});
                                   ~~~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
                                              ~
!!! error TS2741: Property 'a' is missing in type '{}' but required in type 'Foo'.
!!! related TS2728 /a.js:3:23: 'a' is declared here.
    
==== /b.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {number} a
     */
    
    export default /** @satisfies {Foo} */ ({ a: 1 });
                                   ~~~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.